package td1.refactor.api.general;

public interface FoodConstituent {
    double calories_per_100g();
    // calories from http://www.les-calories.com/
}
