package td1.refactor.api.general;

public enum Size {
    SMALL, MEDIUM, BIG;
}
