package td1.refactor.api.general;

public enum Tariff {
    CHEAP, EXPENSIVE;
}
